# cbat

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-build.yaml
src/: account.rs  accounts.rs  api_accounts.rs  api_converts.rs  api_data.rs  api_fees.rs  api_futures.rs  api_orders.rs  api_payment_methods.rs  api_perpetuals.rs  api_portfolios.rs  api_products.rs  api_public.rs  balance.rs  bid_ask.rs  cancel_order.rs  cancel_orders.rs  candle.rs  client.rs  contract_expiry_type.rs  create_order.rs  create_order_request.rs  edit_history.rs  edit_order.rs  edit_order_error.rs  edit_order_request.rs  expiring_contract_status.rs  fcm_trading_session_details.rs  fill.rs  fills.rs  future_product_details.rs  granularity.rs  http_method.rs  lib.rs  limit_limit_fok.rs  limit_limit_gtc.rs  limit_limit_gtd.rs  main.rs  maintenance.rs  market_market_ioc.rs  (+33 more)
