[package]
name = "cbat-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.11", features = ["json"] }
serde = "1.0.217"
serde_derive = "1.0.217"
chrono = { version = "0.4.39", features = ["serde"] }
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
rand = "0.8.5"
sec1 = { version = "0.7.3", features = ["alloc", "pkcs8", "pem", "std"] }
thiserror = "2.0.9"