[package]
name = "cbat"
description = "The unofficial Rust crate for the Coinbase Advanced Trade API"
version = "0.0.8"
edition = "2021"
documentation = "https://docs.rs/cbat"
repository = "https://github.com/confessore/cbat"
license = "MIT"

[lib]
name = "cbat"
src = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.11", features = ["json"] }
serde = "1.0.217"
serde_derive = "1.0.217"
chrono = { version = "0.4.39", features = ["serde"] }
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
rand = "0.8.5"
sec1 = { version = "0.7.3", features = ["alloc", "pkcs8", "pem", "std"] }
thiserror = "2.0.9"
serde_json = "1.0.134"
uuid = { version = "1.11.0", features = ["v4"] }
