[package]
name = "cbat"
description = "The unofficial Rust crate for the Coinbase Advanced Trade API"
version = "0.0.18"
edition = "2021"
documentation = "https://docs.rs/cbat"
repository = "https://github.com/confessore/cbat"
license = "MIT"

[lib]
name = "cbat"
src = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }
rand = "0.9.2"
sec1 = { version = "0.7.3", features = ["alloc", "pkcs8", "pem", "std"] }
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4"] }
